platform-staging/argo/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: private-argo-api
  namespace: cps-argo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cps-compute
          podSelector:
            matchLabels:
              app: compute-gateway
      ports:
        - {protocol: TCP, port: 2746}
